Fixed cart
IT WORKS NOW YIPEEE!! So i did a thing w the cart stuff n explaination from T n it was vv useful!! Though i did have to search up a ton of stuff n do some things diffrently from how i would've before but it's done :D it now works, only the images look way too big so i have to change their style, but rn i dont wanna since i already did this.

--- a/Assets/css/cartStyle.css
+++ b/Assets/css/cartStyle.css
@@ -24,6 +24,10 @@ body{
       background-color: white;
 }
 
+.product-details{
+  align-content: right;
+  text-align: right;
+}
 #cart{
     width: 100%;
     height: 100%;
